--- a/taotao-common/pom.xml
+++ b/taotao-common/pom.xml
@@ -6,6 +6,6 @@
 	<version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.taotao.common</groupId>
-  <artifactId>taotao.common</artifactId>
+  <artifactId>taotao-common</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 </project>
