--- a/taotao-manage/pom.xml
+++ b/taotao-manage/pom.xml
@@ -13,6 +13,11 @@
 	<packaging>pom</packaging>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.taotao.common</groupId>
+			<artifactId>taotao-common</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 		<!-- 单元测试 -->
 		<dependency>
 			<groupId>junit</groupId>
