--- a/taotao-common/pom.xml
+++ b/taotao-common/pom.xml
@@ -36,6 +36,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
