--- a/taotao-manage/taotao-manage-service/pom.xml
+++ b/taotao-manage/taotao-manage-service/pom.xml
@@ -28,6 +28,11 @@
 			<groupId>com.github.jsqlparser</groupId>
 			<artifactId>jsqlparser</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
