--- a/taotao-manage/taotao-manage-web/src/main/resources/env.properties
+++ b/taotao-manage/taotao-manage-web/src/main/resources/env.properties
@@ -1,2 +1,4 @@
 REPOSITORY_PATH=F:\\WorkSpace\\upload\\taotao-upload
 IMAGE_BASE_URL=http://image.taotao.com
+
+TAOTAO_WEB_URL=http://www.taotao.com
